--- a/src/Chat/wwwroot/default.cshtml
+++ b/src/Chat/wwwroot/default.cshtml
@@ -46,12 +46,17 @@
         <div id="users"></div>
         <div id="examples" data-click="sendCommand">
             <span style="position:absolute; top: 2px; right:7px" data-click="toggleExamples">hide</span>
+            <h4><a href="https://sharpscript.net">Example #Script</a></h4>
+            <div>{{ 'Cool' |&gt; padRight(7,'.') |&gt; repeat(3) }}</div>
+            <div>{{#each range(17)}}{{it * it}} {{/each}}</div>
+            <div>My UserAgent: {{ Request.UserAgent }}</div>
+            <div>@@me What's my IP? {{ Request.RemoteIP }}</div>
             <h4><a href="https://github.com/NetCoreApps/Chat#global-event-handlers">Example Commands</a></h4>
             <div>/cmd.announce This is your captain speaking ...</div>
             <div>/cmd.toggle$#channels</div>
             <h4><a href="https://github.com/NetCoreApps/Chat#modifying-css-via-jquery">CSS</a></h4>
-            <div>/css.background-image url(http://bit.ly/1oQqhtm)</div>
-            <div>@@me /css.background-image url(http://bit.ly/1yIJOBH)</div>
+            <div>/css.background-image url(https://bit.ly/3qho6GV)</div>
+            <div>@@me /css.background-image url(https://bit.ly/3qgNcWy)</div>
             <div>/css.background$#top #673ab7</div>
             <div>/css.background$#bottom #0091ea</div>
             <div>/css.background$#right #fffde7</div>
@@ -59,7 +64,7 @@
             <div>/css.visibility$img,a hidden</div>
             <div>/css.visibility$img,a visible</div>
             <h4><a href="https://github.com/NetCoreApps/Chat#receivers">Receivers</a></h4>
-            <div>/tv.watch http://youtu.be/518XP8prwZo</div>
+            <div>/tv.watch https://youtu.be/518XP8prwZo</div>
             <div>/tv.watch https://servicestack.net/img/logo-220.png</div>
             <div>@@me /tv.off</div>
             <div>/document.title New Window Title</div>
@@ -164,7 +169,7 @@
             $(this).toggle();
         },
         sendCommand: function () {
-            $("#txtMsg").val($(this).html()).focus();
+            $("#txtMsg").val($(this).text()).focus();
         },
         privateMsg: function () {
             $txtMsg.val("@@" + this.innerHTML + " ").focus();
@@ -246,20 +251,20 @@
     $txtMsg.keydown(function (e) {
         var keycode = (e.keyCode ? e.keyCode : e.which);
         if ($.ss.getSelection()) {
-            if (keycode == '9' || keycode == '13' || keycode == '32' || keycode == '39') {
+            if (keycode === 9 || keycode === 13 || keycode === 32 || keycode === 39) {
                 this.value += " ";
                 if (this.setSelectionRange) this.setSelectionRange(this.value.length, this.value.length);
                 return false;
             }
         }
-        if (keycode == '13') { //enter
+        if (keycode === 13) { //enter
             postMsg();
-        } else if (keycode == '38') { //up arrow
+        } else if (keycode === 38) { //up arrow
             historyIndex = Math.min(++historyIndex, msgHistory.length);
             $txtMsg.val(msgHistory[msgHistory.length - 1 - historyIndex]);
             return false;
         }
-        else if (keycode == '40') { //down arrow
+        else if (keycode === 40) { //down arrow
             historyIndex = Math.max(--historyIndex, -1);
             $txtMsg.val(msgHistory[msgHistory.length - 1 - historyIndex]);
         } else {
